# raytracer

./: .gitignore  AGENTS.md  pyproject.toml
.beads/: issues.jsonl
.claude_docs/features/cornell-box-raytracer/: frd.md  refinement.md
examples/: __init__.py  interactive_cornell_box.py  render_cornell_box.py
src/: __init__.py
src/python/: __init__.py
src/python/camera/: __init__.py  pinhole.py
src/python/core/: __init__.py  integrator.py  progressive.py  ray.py
src/python/geometry/: __init__.py  quad.py  sphere.py
src/python/materials/: __init__.py  dielectric.py  lambertian.py  metal.py  phosphorescent.py
src/python/preview/: __init__.py  display.py  export.py  interactive.py
src/python/scene/: __init__.py  cornell_box.py  intersection.py  manager.py
tests/: conftest.py  test_cornell_box.py  test_dielectric.py  test_integration.py  test_integrator.py  test_lambertian.py  test_metal.py  test_phosphorescent.py  test_pinhole_camera.py  test_preview.py  test_progressive.py  test_quad.py  test_ray.py  test_scene_intersection.py  test_scene_manager.py  test_sphere.py
